--- a/index.html
+++ b/index.html
@@ -465,7 +465,7 @@
 const firebaseConfig = {
   apiKey: "AIzaSyBd-ogOEv472kKWG9cLpbsFQBAK-i-0grw",
   authDomain: "thaleshwor-mahadev-samuh.firebaseapp.com",
-  databaseURL: "https://thaleshwor-mahadev-samuh-default-rtdb.firebaseio.com",
+  databaseURL: "https://thaleshwor-mahadev-samuh-default-rtdb.firebaseio.com/",  // ← ADD THIS SLASH
   projectId: "thaleshwor-mahadev-samuh",
   storageBucket: "thaleshwor-mahadev-samuh.firebasestorage.app",
   messagingSenderId: "590950394483",
